# smartGenDocs

./: .gitignore  CHANGELOG  CNAME  CODE_OF_CONDUCT.md  GUIDELINES.md  LICENSE  README.md  SECURITY.md  environment.yml  index.md  pyproject.toml  requirements.txt  robots.txt  setup.sh  sitemap.xml  smartgen.yml  tsconfig.json
.github/workflows/: changelog.yml  ci-cd.yml  main.yml  python-package.yml
Updates/: index.html  scripts.js
api/: rate-limits.md  webhooks.md
blog/: tutorials.md
community/: contributing.md  discussions.md  issues.md
data/: changelog.json
docs/: changelog.md  concepts.md  getting-started.md  index.md
docs/about/: contact.md  developer.md  index.md  license.md  sponsor.md
docs/api/: authentication.md  endpoints.md  errors.md  index.md  rate-limits.md  rest-api.md  webhooks.md
docs/blog/: index.md  latest.md
docs/community/: contributing.md  discussions.md  features.md  index.md  issues.md  sponsor.md
docs/docs/: architecture.md  changelog.md  concepts.md  features.md  index.md  platform.md  releases.md
docs/getting-started/: deployment.md  faq.md  first-project.md  folder-structure.md  index.md  installation.md  quick-start.md
docs/guides/: autodoc.md  cli.md  configuration.md  deployment.md  index.md  security.md  seo.md  theming.md
docs/resources/: downloads.md  glossary.md  roadmap.md
docs/sdk/: index.md  javascript-sdk.md  python-sdk.md  python.md
docs/tools/: ai.md  developer.md  index.md  marketing.md  qr-generator.md  seo.md  utilities.md
docs/tutorials/: api.md  beginner.md  best-practices.md  case-studies.md  index.md  integrations.md
getting-started/: deployment.md  faq.md  first-project.md  folder-structure.md  index.md
guides/: accessibility.md  customization.md  performance.md  troubleshooting.md
resources/: examples.md  roadmap.md  templates.md
sdk/: go.md  java.md  javascript.md  php.md
site/: index.html
site/about/: contact.html  developer.html  index.html  license.html
site/api/: authentication.html  endpoints.html  errors.html  index.html  rate-limits.html  rest-api.html  webhooks.html
site/blog/: index.html  latest.html  releases.html  tutorials.html
site/community/: contributing.html  discussions.html  features.html  index.html  issues.html
site/docs/: architecture.html  changelog.html  concepts.html  features.html  index.html  platform.html  releases.html
site/getting-started/: deployment.html  faq.html  first-project.html  folder-structure.html  index.html  installation.html  quick-start.html
site/guides/: accessibility.html  configuration.html  customization.html  performance.html  security.html  seo.html  troubleshooting.html
site/resources/: downloads.html  examples.html  glossary.html  roadmap.html  templates.html
site/sdk/: go.html  index.html  java.html  javascript.html  php.html  python.html
site/static/css/: style.css
site/tools/: ai.html  developer.html  index.html  marketing.html  qr-generator.html  seo.html  utilities.html
site/tutorials/: api.html  beginner.html  best-practices.html  case-studies.html  index.html  integrations.html
smartgen_docs/: __init__.py  autodoc.py  changelog_renderer.py  cli.py  converter.py  core.py  path_resolver.py  plugins.py  scaffold.py  server.py  theme_engine.py  upload_server.py
smartgen_docs/themes/default/: base.html  base_premium.html  page.html  page_premium.html
smartgen_docs/themes/default/static/css/: premium.css
tools/: ai.md  developer.md  index.md  marketing.md  seo.md
tutorials/: api.md  integrations.md
