# Copyright (c) 2026 Sayad Md Bayezid Hosan (Smartgen Platform)
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to
# deal in the Software without restriction, including without limitation the
# rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
# sell copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:

# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.

# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

[build-system]
requires = [
    "setuptools>=69.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "smartgen-docs"
version = "0.1.0"

description = "SmartGen Docs is a modern, open-source static documentation framework for building fast, searchable, SEO-friendly documentation websites, API references, developer portals, technical guides, and knowledge bases."

readme = "README.md"
requires-python = ">=3.9"

license = { text = "MIT" }

authors = [
    { name = "Sayad Md Bayezid Hosan", email = "contact@smartgentools.com" }
]

maintainers = [
    { name = "Sayad Md Bayezid Hosan", email = "contact@smartgentools.com" }
]

keywords = [
    "smartgen",
    "smartgen docs",
    "documentation",
    "documentation generator",
    "documentation framework",
    "developer portal",
    "knowledge base",
    "technical documentation",
    "api documentation",
    "markdown",
    "static site generator",
    "static website",
    "seo",
    "search",
    "developer tools"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Documentation",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed"
]

dependencies = [
    "click>=8.1",
    "Jinja2>=3.1",
    "markdown2>=2.5",
    "PyYAML>=6.0",
    "watchdog>=6.0",
    "Pygments>=2.18"
]

[project.optional-dependencies]

search = [
    "whoosh>=2.7"
]

images = [
    "Pillow>=11.0"
]

minify = [
    "htmlmin>=0.1",
    "csscompressor>=0.9",
    "jsmin>=3.0"
]

dev = [
    "pytest>=8.0",
    "black>=25.0",
    "ruff>=0.12",
    "build>=1.2",
    "twine>=6.0"
]

full = [
    "smartgen-docs[search,images,minify,dev]"
]

[project.urls]
Homepage = "https://www.smartgentools.com"
Documentation = "https://bayeziddev.github.io/smartGenDocs/"
Repository = "https://github.com/bayeziddev/smartGenDocs"
Issues = "https://github.com/bayeziddev/smartGenDocs/issues"
Discussions = "https://github.com/bayeziddev/smartGenDocs/discussions"
Releases = "https://github.com/bayeziddev/smartGenDocs/releases"
Developer = "https://g.dev/SayadBayezid"
GitHub = "https://github.com/sayadbayezid"
LinkedIn = "https://www.linkedin.com/in/sayadbayezid"
Website = "https://www.smartgentools.com"

[project.scripts]
smartgen = "smartgen_docs.cli:main"
smartgen-docs = "smartgen_docs.cli:main"

[project.entry-points."smartgen.builders"]

[project.entry-points."smartgen.plugins"]

[project.entry-points."smartgen.themes"]

[project.entry-points."smartgen.markdown"]

[project.entry-points."smartgen.search"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "smartgen_docs*"
]

[tool.setuptools.package-data]
smartgen_docs = [
    "themes/**/*",
    "templates/**/*",
    "assets/**/*",
    "static/**/*",
    "icons/**/*",
    "schemas/**/*"
]

[tool.setuptools]
include-package-data = true
zip-safe = false
